--- a/README.rmd
+++ b/README.rmd
@@ -255,6 +255,67 @@ ALSI <- read_rds("/Users/x/Downloads/28736907_Fin_Metrics/Questions/Question4/da
 
 ```
 
+To prepare the data for later analysis, the benchmark and the Snakeoil portfolio are capped to the same start and end date and transformed to xts format. 
+
+```{r}
+Swix <- BM_Rets %>% filter(date >= ymd(20191031))
+Endate <- ymd(20241031)
+
+Ra <- Swix %>%
+    filter(date <= Endate) %>%
+    filter(date >= fmxdat::safe_month_min(last(date), N = 36)) %>%
+    tbl2xts::tbl_xts(cols_to_xts = BM)
+
+Rs <- Port_Rets %>%
+    filter(date <= Endate) %>%
+    filter(date >= fmxdat::safe_month_min(last(date), N = 36)) %>%
+    tbl2xts::tbl_xts(cols_to_xts = Returns)
+
+pacman::p_load(tbl2xts, PerformanceAnalytics)
+
+xts_port <- tbl_xts(Port_Rets)
+xts_bench <- tbl_xts(BM_Rets)
+```
+
+The data then allows to calculate quantitative information on the fund. As a first step the tracking error is calculated which measures the standard deviation of the difference between a portfolio's returns and its benchmark's returns, indicating the consistency of the portfolio's performance relative to the benchmark.
+
+```{r}
+TE <- fmxdat::Safe_TE(Ra, Rs, scale = 12)
+```
+
+As a next step the cumulative returns of the Benchmark and the Snakeoil Fund will be plotted to give a first impression which one performs better and by how much.
+
+```{r}
+merged <- merge.xts(xts_port, xts_bench)
+chart.CumReturns(merged, legend.loc = 1)
+```
+
+Then, the 12-month rolling beta is calculated to provide a dynamic view of the fund's sensitivity to the benchmark over time. This metric helps assess how the fund's positioning aligns with or deviates from the benchmark under different market conditions, offering insights into changes in risk exposure and informing discussions on relative performance and strategy effectiveness.
+
+```{r}
+chart.RollingRegression(Ra = xts_port, Rb = xts_bench, width = 12,
+    attribute = c("Beta"))
+```
+
+To compare the cumulative returns of the fund against its benchmark, the chart.RelativePerformance function is used to visually provide a clear perspective on the fund's relative performance over time and highlighting periods of outperformance or underperformance.
+
+```{r}
+chart.RelativePerformance(xts_port, xts_bench)
+```
+
+To measure the fund's risk-adjusted performance relative to its benchmark, the Information Ratio is calculated, helping to evaluate the consistency and efficiency of the fund manager's active investment decisions.
+
+```{r}
+IR <- ratio.information(xts_port, xts_bench)
+```
+
+Inorder to provide insights into alpha, beta, R-squared, and other metrics that quantify the fund's relative performance and risk characteristics over time, the SFM table is computed.
+
+```{r}
+sfm <- table.SFM(Ra = xts_port, Rb = xts_bench, 12)
+```
+
+
 Question 5
 
 I this question I will analyze the South African rand (ZAR) relative to the USD, comparing its volatility and performance to other major currencies. The analysis will measure volatility across time and compare the ZAR with G10 currencies to confirm if it is among the most volatile. Additionally, I will evaluate the ZAR's performance during favorable G10 currency carry trade periods and assess its behavior during phases of Dollar strength, indicating risk-on sentiment. Insights will be presented using tables, graphs, and statistical comparisons to support the conclusions.
