--- a/Questions/Question2/Question2.Rmd
+++ b/Questions/Question2/Question2.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Paged HTML Document"
-author: "NF Katzke"
-date: "November 2021"
+title: "Question 2: Currency Hedging Analysis"
+author: "Vincent Reinshagen"
+date: "November 2024"
 # date: "`r Sys.Date()`"
 bibliography: Tex/ref.bib       # Do not edit: Keep this naming convention and location.
 output:
@@ -15,15 +15,15 @@ output:
     toc: true
     # change to true for a self-contained document, but it'll be a litte slower for Pandoc to render
     self_contained: TRUE
-abstract: |
-    This is an abstract. Much can be written here. Uncomment this line to go without an abstract.
-    Abstracts have no spaces, but can have bullets.
-
-    Bullets can be created as follows
-
-    + You can add bullets, but do not add colons please.
-
-    + Line breaks are also not permitted.
+# <!-- abstract: | -->
+# <!--     This is an abstract. Much can be written here. Uncomment this line to go without an abstract. -->
+# <!--     Abstracts have no spaces, but can have bullets. -->
+# 
+# <!--     Bullets can be created as follows -->
+# 
+# <!--     + You can add bullets, but do not add colons please. -->
+# 
+# <!--     + Line breaks are also not permitted. -->
 
 ---
 
