--- a/Questions/Question6/Question6.Rmd
+++ b/Questions/Question6/Question6.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Paged HTML Document"
-author: "NF Katzke"
-date: "November 2021"
+title: "PQuestion 6: Portfolio Constructiont"
+author: "Vincent Reinshagen"
+date: "November 2024"
 # date: "`r Sys.Date()`"
 bibliography: Tex/ref.bib       # Do not edit: Keep this naming convention and location.
 output:
